--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=lab4_Gtics_20182693
+spring.datasource.url=jdbc:mysql://localhost:3306/floreria
+spring.datasource.username=root
+spring.datasource.password=root
+server.port=8080
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
